[package]
name = "tictactoe"
version = "0.1.0"
edition = "2024"
authors = ["Han Pham <hanpham3230@gmail.com>"]
description = "Tic-Tac-Toe Cli game program"
keywords = ["tictactoe", "cli", "game"]
categories = ["command-line-games"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
